1st/2-deployment-labnginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labnginx-deployment
  namespace: labnginx
  labels:
    app: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: nginx
