1st/3-service-labnginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: labnginx
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30500
  selector:
    app: nginx-app
