1st/4-service-loadbalancer-labnginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-loadbalancer
  namespace: labnginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      nodePort: 30001
  selector:
    app: nginx
